--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Mirror Fashion</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/estilos.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="css/mobile.css" media="(max-width: 320px)">
 </head>
 
 <body>
@@ -57,6 +59,12 @@
         <ul>
           <li>
             <a href="#">Blusas e Camisas</a>
+            <ul class="sub-menu">
+              <li><a href="#">Manga curta</a></li>
+              <li><a href="#">Manga comprida</a></li>
+              <li><a href="#">Camisa social</a></li>
+              <li><a href="#">Camisa casual</a></li>
+            </ul>
           </li>
           <li>
             <a href="#">Calças</a>
