--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/estilos.css">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="css/mobile.css" media="(max-width: 320px)">
+  <link rel="stylesheet" href="css/mobile.css" media="(max-width: 939px)">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
           <a href="#">Cartão Fidelidade</a>
         </li>
         <li>
-          <a href="sobre.html">Sobre</a>
+          <a href="sobre.php">Sobre</a>
         </li>
         <li>
           <a href="#">Ajuda</a>
@@ -228,18 +228,6 @@
     </section>
   </div>
 
-  <footer>
-    <div class="container">
-      <img src="img/logo-rodape.png" alt="Logo Mirror Fashion">
- 
-      <ul class="social">
-        <li><a href="http://facebook.com/cassi.nodari">Facebook</a></li>
-        <li><a href="http://twitter.com/cassianenodari">Twitter</a></li>
-        <li><a href="http://plus.google.com/cassianenodari">Google+</a></li>
-      </ul>
- 
-    </div>
-  </footer>
 </body>
 
 </html>
