--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p class="sacola">
       Nenhum item na sacola de compras
     </p>
-
+<!--   TESTE REPO REMOTE   -->
     <nav class="menu-opcoes">
       <ul>
         <li>
